add link for privacy policy

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is The Website of Quick NoteZ Application.</h1>
+    <a href="privacy-policy.html">Click here to go to Privacy Policy</a>
 </body>
 </html>
